# platformer

./: Cargo.toml
assets/: chain_1.aseprite  platform_1.aseprite
src/: configs.rs  game_state.rs  input.rs  keybinds.rs  main.rs  physics.rs  platforms.rs  player.rs  plugin.rs
src/resources/: b08_001.aseprite
