[package]
name = "platformer-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_rapier2d = "0.28.0"
bevy_asset_loader = "0.20"  # For asset loading
rand = "0.8"  # For random number generation
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "1.0"
serde_plain = "1.0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
